<resources>
    <string name="app_name">Ecom</string>
    <string name="account">account</string>
    <string name="cart">cart</string>
    <string name="messages">messages</string>
    <string name="home">home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_welcome_to_shop">Hello, Welcome to shop</string>
    <string name="login">Login</string>
    <string name="sign_up">Signup</string>
    <string name="to_ship">To ship</string>
    <string name="to_pay">To pay</string>
    <string name="to_receive">Receive</string>
    <string name="review">Review</string>
    <string name="cancel">Cancel</string>
    <string name="my_orders">My Orders</string>
    <string name="history">History</string>
    <string name="coupons">Coupons</string>
    <string name="my_reviews">My Reviews</string>
    <string name="help_center">Help Center</string>
    <string name="customer_support">Customer Support</string>
    <string name="settings">Settings</string>
    <string name="my_cart">My Cart</string>
    <string name="no_items_in_the_cart">No items in the cart</string>
    <string name="continue_shopping">Continue shopping</string>
    <string name="trolley_icon">Trolley Icon</string>
    <string name="discover_the_endless_possibilities">Discover the endless possibilities</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="login_now">Login Now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="username">username</string>
    <string name="switch_account">Switch account</string>
    <string name="not_you">Not you?</string>
    <string name="whishlist">Whishlist</string>
    <string name="stores">Stores</string>
    <string name="wishlist">Wishlist</string>
    <string name="_0">0</string>
    <string name="vouchers">Vouchers</string>
    <string name="account_information">Account Information</string>
    <string name="address_book">Address Book</string>
    <string name="account_security">Account security</string>
    <string name="policies">Policies</string>
    <string name="request_account_deletion">Request Account Deletion</string>
    <string name="logout">Logout</string>
    <string name="there_are_no_items_in_the_cart">There are no items in the cart</string>
    <string name="start_texting">Start Texting</string>
    <string name="no_messages_yet">No messages, yet.</string>
    <string name="no_messages_icon">No messages icon</string>
    <string name="shop">Shop</string>
    <string name="fashion">Fashion</string>
    <string name="stationary">Stationary</string>
    <string name="sports">Sports</string>
    <string name="bikes">Bikes</string>
    <string name="appliances">Appliances</string>
    <string name="mobiles">Mobiles</string>
    <string name="accessories">Accessories</string>
    <string name="makeup">Makeup</string>
    <string name="crockery">Crockery</string>
    <string name="product_image">Product Image</string>
    <string name="discount">% Discount</string>
    <string name="for_you">For you</string>
    <string name="search_here">Search here...</string>
</resources>