<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/arrow"
        android:id="@+id/backToAccountFrag"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:backgroundTint="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/backToAccountFrag"
        app:layout_constraintStart_toEndOf="@+id/backToAccountFrag"
        app:layout_constraintTop_toTopOf="@+id/backToAccountFrag" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountInfoButton"
        android:text="@string/account_information"
        android:textColor="@color/grey"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:paddingStart="30dp"
        android:padding="10dp"
        android:textAllCaps="false"
        tools:ignore="MissingConstraints,RtlSymmetry"
        app:layout_constraintTop_toBottomOf="@id/backToAccountFrag"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/addressBookButton"
        android:text="@string/address_book"
        android:textColor="@color/grey"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/accountInfoButton"
        android:textAllCaps="false"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountSecurityButton"
        android:text="@string/account_security"
        android:textColor="@color/grey"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/addressBookButton"
        android:textAllCaps="false"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/policiesButton"
        android:text="@string/policies"
        android:textColor="@color/grey"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/accountSecurityButton"
        android:textAllCaps="false"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accountDeletionButton"
        android:text="@string/request_account_deletion"
        android:textColor="@color/grey"
        android:textAlignment="textStart"
        android:backgroundTint="@color/white"
        android:textSize="20sp"
        android:paddingStart="30dp"
        app:layout_constraintTop_toBottomOf="@+id/policiesButton"
        android:textAllCaps="false"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/logoutButton"
        android:text="@string/logout"
        android:textColor="@color/Red"
        android:textAlignment="center"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textSize="23sp"
        app:layout_constraintTop_toBottomOf="@+id/accountDeletionButton"
        android:textAllCaps="false"
        tools:ignore="RtlSymmetry"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>