<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".accountFrag"
    android:layout_margin="10dp"
    android:paddingTop="20dp">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/user"
        app:layout_constraintBottom_toBottomOf="@+id/wishlist"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcomeText"
        android:background="@drawable/round_image"
        android:backgroundTint="@color/lightGrey"
        android:clipToOutline="true"/>

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:textSize="17sp"
        android:text="@string/username"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/wishlist"
        app:layout_constraintStart_toStartOf="@+id/wishlist"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/settings"
        android:src="@drawable/setting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/wishlist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/stores"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">

        <TextView
            android:id="@+id/wishlistNumbers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/_0" />

        <TextView
            android:id="@+id/wishlistText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wishlist" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/stores"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:padding="10dp"
        app:layout_constraintStart_toEndOf="@id/wishlist"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText"
        app:layout_constraintHorizontal_chainStyle="packed"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/storesNumbers"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stores"
            android:id="@+id/storesText"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/vouchers"
        android:focusable="true"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:padding="10dp"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@id/stores"
        app:layout_constraintTop_toBottomOf="@+id/welcomeText">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:id="@+id/vouchersNumbers"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vouchers"
            android:id="@+id/vouchersText"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myOrdersText"
        android:text="@string/my_orders"
        android:padding="15dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/wishlist"
        android:background="@color/white"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myOrdersCard"
        app:layout_constraintTop_toBottomOf="@+id/myOrdersText">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toShipButton"
                android:text="@string/to_ship"
                app:icon="@drawable/ship"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                app:iconGravity="top"
                android:textAlignment="center"
                app:iconSize="30dp"
                android:backgroundTint="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@+id/toPayButton"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/toPayButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:text="@string/to_pay"
                android:textAlignment="center"
                android:textColor="@color/grey"
                app:icon="@drawable/pay"
                app:iconGravity="top"
                app:iconSize="30dp"
                app:iconTint="@color/grey"
                app:layout_constraintEnd_toStartOf="@+id/toReceiveButton"
                app:layout_constraintStart_toEndOf="@+id/toShipButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toReceiveButton"
                android:text="@string/to_receive"
                app:icon="@drawable/received"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                app:iconGravity="top"
                android:textAlignment="center"
                app:iconSize="30dp"
                android:backgroundTint="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/toPayButton"
                app:layout_constraintHorizontal_chainStyle="spread"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toReviewButton"
                android:text="@string/review"
                app:icon="@drawable/review"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                app:iconGravity="top"
                android:textAlignment="center"
                app:iconSize="30dp"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/toShipButton"
                app:layout_constraintEnd_toEndOf="@+id/toShipButton"
                android:paddingTop="10dp"
                />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/toCancelButton"
                android:text="@string/cancel"
                app:icon="@drawable/cancel"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                app:iconGravity="top"
                android:textAlignment="center"
                app:iconSize="30dp"
                android:backgroundTint="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/toPayButton"
                app:layout_constraintEnd_toEndOf="@+id/toPayButton"
                android:paddingTop="10dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Card"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/myOrdersCard">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/historyButton"
                android:text="@string/history"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:paddingStart="30dp"
                android:textAllCaps="false"
                tools:ignore="MissingConstraints,RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/couponsButton"
                android:text="@string/coupons"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:paddingStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/historyButton"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/myReviewsButton"
                android:text="@string/my_reviews"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:paddingStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/couponsButton"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/helpCenterButton"
                android:text="@string/help_center"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:paddingStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/myReviewsButton"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CustomerSupportButton"
                android:text="@string/customer_support"
                app:iconTint="@color/grey"
                android:textColor="@color/grey"
                android:textAlignment="textStart"
                android:backgroundTint="@color/white"
                android:textSize="17sp"
                android:paddingStart="30dp"
                app:layout_constraintTop_toBottomOf="@+id/helpCenterButton"
                android:textAllCaps="false"
                tools:ignore="RtlSymmetry" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>