<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cartFrag">

    <TextView
        android:id="@+id/myOrdersText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="15dp"
        android:text="@string/my_cart"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/trolley_icon"
        android:src="@drawable/trolley"
        app:layout_constraintBottom_toTopOf="@+id/noItemsText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/noItemsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/there_are_no_items_in_the_cart"
        android:textColor="@color/grey"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButton"
        app:layout_constraintStart_toStartOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="@+id/myOrdersText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueShoppingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/blue_border"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/continue_shopping"
        android:textAllCaps="false"
        android:textColor="@color/darkBlue"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/noItemsText"
        app:layout_constraintStart_toStartOf="@+id/noItemsText"
        app:layout_constraintTop_toBottomOf="@+id/noItemsText"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cartProgressBar"
        android:layout_margin="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/continueShoppingButton"
        />


</androidx.constraintlayout.widget.ConstraintLayout>